Fixing index and js css input dark mode

--- a/chamber/css/style.css
+++ b/chamber/css/style.css
@@ -155,6 +155,15 @@ nav {
     display: none;
 }
 
+#mode {
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	font-size: 3rem;
+	cursor: pointer;
+}
+
+
 /*Start Nav-bar */
 
 /*Mobile for small screens*/
